rules/dangling-networkpolicy/test/failed_wrong_namespace/input/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  namespace: other
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx:latest
